# user-management-rust

./: Cargo.toml  README.md
models/: user_model.rs
src/: main.rs
src/api/: user_api.rs
src/repository/: mongodb_repo.rs
