[package]
name = "user-management-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3" }
serde = { version = "1.0" }
dotenv = { version = "0.15" }
futures = { version = "0.3" }
mongodb = { version = "2.6", default-features = false, features = ["async-std-runtime"] }